--- a/play.html
+++ b/play.html
@@ -73,7 +73,8 @@ var combat = null // combat object
 var inCombat = false // are we currently in combat?
 var gameHasFocus = false // do we have input focus?
 var lastMousePickTime = 0 // time when we last checked what's under the mouse cursor
-var UI_MODE_NONE = 0, UI_MODE_DIALOGUE = 1, UI_MODE_BARTER = 2, UI_MODE_LOOT = 3
+var UI_MODE_NONE = 0, UI_MODE_DIALOGUE = 1, UI_MODE_BARTER = 2, UI_MODE_LOOT = 3,
+    UI_MODE_INVENTORY = 4
 var uiMode = UI_MODE_NONE
 
 var isLoading = true // are we currently loading a map?
