ui: add disable-selection

--- a/play.html
+++ b/play.html
@@ -1194,7 +1194,7 @@ function dialogueEnd() { scriptingEngine.dialogueEnd() }
 	<div id="bar">
 		<div id="displayLog"></div>
 
-		<div id="attackButton"></div>
+		<div id="attackButton" class="disable-selection"></div>
 		<div id="inventoryButton"></div>
 		<div id="chrButton"></div>
 
