ui: make attack button feel better

--- a/play.html
+++ b/play.html
@@ -1194,7 +1194,11 @@ function dialogueEnd() { scriptingEngine.dialogueEnd() }
 	<div id="bar">
 		<div id="displayLog"></div>
 
-		<div id="attackButton" class="disable-selection"></div>
+		<div id="attackButtonContainer" class="disable-selection">
+			<div id="attackButton"></div>
+			<img id="attackButtonWeapon"></img>
+
+		</div>
 		<div id="inventoryButton"></div>
 		<div id="chrButton"></div>
 
