ui: add active weapon AP cost

--- a/play.html
+++ b/play.html
@@ -1197,6 +1197,9 @@ function dialogueEnd() { scriptingEngine.dialogueEnd() }
 		<div id="attackButtonContainer" class="disable-selection">
 			<div id="attackButton"></div>
 			<img id="attackButtonWeapon"></img>
+			<div id="attackButtonAP">
+				<div id="attackButtonAPDigit"></div>
+			</div>
 
 		</div>
 		<div id="inventoryButton"></div>
