ui: add weapon type

--- a/play.html
+++ b/play.html
@@ -1196,11 +1196,11 @@ function dialogueEnd() { scriptingEngine.dialogueEnd() }
 
 		<div id="attackButtonContainer" class="disable-selection">
 			<div id="attackButton"></div>
+			<img id="attackButtonType"></img>
 			<img id="attackButtonWeapon"></img>
 			<div id="attackButtonAP">
 				<div id="attackButtonAPDigit"></div>
 			</div>
-
 		</div>
 		<div id="inventoryButton"></div>
 		<div id="chrButton"></div>
