ui: add combat end buttons

--- a/play.html
+++ b/play.html
@@ -1218,6 +1218,11 @@ function dialogueEnd() { scriptingEngine.dialogueEnd() }
 			<div id="acDigit3" class="number"></div>
 			<div id="acDigit4" class="number"></div>
 		</div>
+
+		<div id="endContainer">
+			<div id="endTurnButton"></div>
+			<div id="endCombatButton"></div>
+		</div>
 	</div>
 </div>
 </body>
