ui: fix loot not clearing UI mode

--- a/play.html
+++ b/play.html
@@ -22,7 +22,7 @@
 <script>
 "use strict";
 
-var MAP_NAME = "gecksetl" // name of the current map
+var MAP_NAME = "artemple" // name of the current map
 var DEBUG = false // debug mode
 
 var gMapScript = null
