turn on critter heartbeats by default

--- a/play.html
+++ b/play.html
@@ -60,7 +60,7 @@ var showWalls = true // show walls?
 var showBoundingBox = false // show bounding boxes around objects?
 
 var doLoadScripts = true // should we load scripts?
-var doUpdateCritters = false // should we give critters heartbeats?
+var doUpdateCritters = true // should we give critters heartbeats?
 var doTimedEvents = true // should we handle registered timed events?
 var doCombat = true // allow combat?
 var doUseWeaponModel = true // use weapon model for NPC models?
