implement metarule 15 / elevator (todo: elevator table)

--- a/play.html
+++ b/play.html
@@ -33,7 +33,7 @@ limitations under the License.
 <script>
 "use strict";
 
-var MAP_NAME = "arcaves" // name of the current map
+var MAP_NAME = "vault13" // name of the current map
 var DEBUG = false // debug mode
 
 var gMapScript = null
@@ -73,7 +73,7 @@ var showBoundingBox = false // show bounding boxes around objects?
 var showSpatials = true // show spatial script triggers?
 
 var doLoadScripts = true // should we load scripts?
-var doUpdateCritters = true // should we give critters heartbeats?
+var doUpdateCritters = false // should we give critters heartbeats?
 var doTimedEvents = true // should we handle registered timed events?
 var doCombat = true // allow combat?
 var doUseWeaponModel = true // use weapon model for NPC models?
