ui: add elevator box

--- a/play.html
+++ b/play.html
@@ -87,7 +87,7 @@ var inCombat = false // are we currently in combat?
 var gameHasFocus = false // do we have input focus?
 var lastMousePickTime = 0 // time when we last checked what's under the mouse cursor
 var UI_MODE_NONE = 0, UI_MODE_DIALOGUE = 1, UI_MODE_BARTER = 2, UI_MODE_LOOT = 3,
-    UI_MODE_INVENTORY = 4, UI_MODE_WORLDMAP = 5
+    UI_MODE_INVENTORY = 4, UI_MODE_WORLDMAP = 5, UI_MODE_ELEVATOR = 6
 var uiMode = UI_MODE_NONE
 
 var mapAreas = null
@@ -1369,6 +1369,13 @@ function dialogueEnd() { scriptingEngine.dialogueEnd() }
 			<div id="worldMapLabels"></div>
 		</div>
 		<div id="worldMapWorld"></div>
+	</div>
+	<div id="elevatorBox">
+		<div id="elevatorButton1" class="elevatorButton"></div>
+		<div id="elevatorButton2" class="elevatorButton"></div>
+		<div id="elevatorButton3" class="elevatorButton"></div>
+		<div id="elevatorButton4" class="elevatorButton"></div>
+		<div id="elevatorPositioner"></div>
 	</div>
 </div>
 </body>
