ui: implement elevator labels

--- a/play.html
+++ b/play.html
@@ -1373,6 +1373,7 @@ function dialogueEnd() { scriptingEngine.dialogueEnd() }
 		<div id="worldMapWorld"></div>
 	</div>
 	<div id="elevatorBox">
+		<div id="elevatorLabel"></div>
 		<div id="elevatorButton1" class="elevatorButton"></div>
 		<div id="elevatorButton2" class="elevatorButton"></div>
 		<div id="elevatorButton3" class="elevatorButton"></div>
