--- a/play.html
+++ b/play.html
@@ -80,6 +80,7 @@ var doCombat = true // allow combat?
 var doUseWeaponModel = true // use weapon model for NPC models?
 var doLoadItemInfo = true // load item information (such as inventory images)?
 var doAlwaysRun = true // always run instead of walk?
+var doZOrder = false // Z-order objects?
 
 var gameTickTime = 0 // in Fallout 2 ticks (elapsed seconds * 10)
 var lastGameTick = 0 // real time of the last game tick
