silence some more startup spew

--- a/play.html
+++ b/play.html
@@ -80,7 +80,7 @@ var doCombat = true // allow combat?
 var doUseWeaponModel = true // use weapon model for NPC models?
 var doLoadItemInfo = true // load item information (such as inventory images)?
 var doAlwaysRun = true // always run instead of walk?
-var doZOrder = false // Z-order objects?
+var doZOrder = true // Z-order objects?
 
 var gameTickTime = 0 // in Fallout 2 ticks (elapsed seconds * 10)
 var lastGameTick = 0 // real time of the last game tick
@@ -528,8 +528,8 @@ function loadObjectScripts(objects) {
 		if(scriptName === undefined || objects[i]._script !== undefined) continue
 		if(goodScripts[scriptName] === false) continue
 
-		console.log("loading " + scriptName + " for " + objects[i].art + " (" + objects[i].type + ")" +
-			" @ " + objects[i].position.x + ", " + objects[i].position.y)
+		/*console.log("loading " + scriptName + " for " + objects[i].art + " (" + objects[i].type + ")" +
+			" @ " + objects[i].position.x + ", " + objects[i].position.y)*/
 		var script = scriptingEngine.loadScript(scriptName)
 		if(script === null) {
 			console.log("load script failed for " + scriptName)
